--- a/src/main/resources-online/db-conf.properties
+++ b/src/main/resources-online/db-conf.properties
@@ -1,3 +1,3 @@
-dataSource.url=jdbc:mysql://rm-4pxb5814b6v240paf.mysql.rdstest.tbsite.net:3306/keymeta?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-dataSource.username=keymeta
-dataSource.password=0tu67i7sz464tt6h%
+dataSource.url=jdbc:mysql://localhost:3306/mahjongonline?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+dataSource.username=root
+dataSource.password=
