--- a/src/main/resources-daily/db-conf.properties
+++ b/src/main/resources-daily/db-conf.properties
@@ -1,3 +1,7 @@
-dataSource.url=jdbc:mysql://localhost:3306/mahjongonline?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-dataSource.username=root
-dataSource.password=
+#dataSource.url=jdbc:mysql://localhost:3306/mahjongonline?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+#dataSource.username=root
+#dataSource.password=
+
+dataSource.url=jdbc:mysql://apitest.mysql.rdstest.tbsite.net:3306/apiserver?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+dataSource.username=apiadmin
+dataSource.password=ApiAdmin@123
