--- a/src/main/resources-daily/db-conf.properties
+++ b/src/main/resources-daily/db-conf.properties
@@ -1,7 +1,3 @@
-dataSource.url=jdbc:mysql://localhost:3306/mahjongonline?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+dataSource.url=jdbc:mysql://47.94.86.16:3306/majiang?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 dataSource.username=root
-dataSource.password=
-
-#dataSource.url=jdbc:mysql://apitest.mysql.rdstest.tbsite.net:3306/apiserver?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-#dataSource.username=apiadmin
-#dataSource.password=ApiAdmin@123
+dataSource.password=1234567
