--- a/src/main/resources-online/db-conf.properties
+++ b/src/main/resources-online/db-conf.properties
@@ -1,3 +1,3 @@
-dataSource.url=jdbc:mysql://localhost:3306/mahjongonline?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+dataSource.url=jdbc:mysql://47.94.86.16:3306/majiang?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 dataSource.username=root
-dataSource.password=
+dataSource.password=1234567
